# Multichain

./: .gitignore  .token  CMakeLists.txt  GlobalVariables.txt  basiccontroller.cpp  basiccontroller.h  comand.txt  main.cpp  main.qml  qml.qrc
kuba/: basiccontroller.h  main.qml
kuba/srcgui/configuration/: ColorConstants.qml
piotrek/: Makefile  make.sh  notes.txt  result.txt
piotrek/inc/: IpfsClient.hh  IpfsTests.hh
piotrek/src/: IpfsClient.cpp  main.cpp
production/: .gitignore  basiccontroller.cpp
production/srcback/inc/: CmdClient.hh  MultichainClient.hh
production/srcback/src/: CmdClient.cpp  IpfsClient.cpp  MultichainClient.cpp
production/srcgui/configuration/: MainWindowConstants.qml
production/srcgui/dropfilearea/: DropFileArea.qml
srcback/: info.txt
srcback/inc/: CmdClient.hh  MultichainClient.hh  MultichainInitialization.hh  StringFinder.hh  test_file.hh
srcback/src/: CmdClient.cpp  IpfsClient.cpp  IpfsTests.cpp  MultichainClient.cpp  MultichainInitialization.cpp  StringFinder.cpp  test_file copy.cpp
srcgui/authorsview/: AuthorsView.qml
srcgui/configuration/: ColorConstants.qml  DropFileAreaConstants.qml  ListViewAreaConstants.qml  ManagementButtonConstants.qml  ManagementPanelConstants.qml  SharedConstants.qml  qmldir
srcgui/contentitem/: ContentItem.qml
srcgui/dropfilearea/: DropFileArea.qml  dropfileareacontroller.cpp  dropfileareacontroller.h
srcgui/listviewarea/: ListViewArea.qml
srcgui/managementpanel/: ManagementButton.qml  ManagementPanel.qml
srcgui/messagedialog/: CustomMessageDialog.qml  custommessagedialogcontroller.cpp  custommessagedialogcontroller.h
srcgui/rectanglesolidborder/: RectangleSolidBorder.qml
